Stop status bar from being pushed off screen

--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ textarea, input {
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
     /* #treeContainer::after {
